--- a/configuration.org
+++ b/configuration.org
@@ -344,6 +344,25 @@ color codes. This makes it easier to read and interpret the output.
 #+begin_src emacs-lisp
   (add-hook 'compilation-filter-hook 'ansi-color-compilation-filter)
 #+end_src
+
+Tell compilation mode how to handle eslint output in compilation mode.
+#+begin_src emacs-lisp
+  (require 'compile)
+
+  (setq compilation-error-regexp-alist-alist
+        (cons '(eslint-line "^[^0-9]*\\([0-9]+\\):\\([0-9]+\\).*$" nil 1 2)
+              compilation-error-regexp-alist-alist))
+
+  (setq compilation-error-regexp-alist
+        (cons 'eslint-line compilation-error-regexp-alist))
+
+  (setq compilation-error-regexp-alist-alist
+        (cons '(eslint-file "^\\(/.+\\..+\\)$" 1 nil nil 0)
+              compilation-error-regexp-alist-alist))
+
+  (setq compilation-error-regexp-alist
+        (cons 'eslint-file compilation-error-regexp-alist))
+#+end_src
 *** Tabs
 Use 4 spaces instead of a tab.
 
