--- a/configuration.org
+++ b/configuration.org
@@ -349,19 +349,19 @@ Tell compilation mode how to handle eslint output in compilation mode.
 #+begin_src emacs-lisp
   (require 'compile)
 
-  (setq compilation-error-regexp-alist-alist
-        (cons '(eslint-line "^[^0-9]*\\([0-9]+\\):\\([0-9]+\\).*$" nil 1 2)
-              compilation-error-regexp-alist-alist))
+  (defun add-compilation-pattern(pat)
+    (let ((alist-key (car pat)))
+      (progn
+        (setq compilation-error-regexp-alist-alist (cons pat compilation-error-regexp-alist-alist))
+        (setq compilation-error-regexp-alist (cons alist-key compilation-error-regexp-alist)))))
 
-  (setq compilation-error-regexp-alist
-        (cons 'eslint-line compilation-error-regexp-alist))
-
-  (setq compilation-error-regexp-alist-alist
-        (cons '(eslint-file "^\\(/.+\\..+\\)$" 1 nil nil 0)
-              compilation-error-regexp-alist-alist))
-
-  (setq compilation-error-regexp-alist
-        (cons 'eslint-file compilation-error-regexp-alist))
+  (let ((compilation-patterns
+         '(
+           (eslint-line "^[[[[:space:]]]]+\\([0-9]+\\):\\([0-9]+\\)[[[[:space:]]]]+\\(?:\\(warning\\)\\|\\(info\\)\\).*$" nil 1 2 (3 . 4))
+           (eslint-file "^\\(/.+\\.[a-z]+\\)$" 1 nil nil)
+           (my-typescript-tsc-pretty "^\\\s+\\(.*\\):\\([0-9]+\\):\\([0-9]+\\).*" 1 2 3 2))))
+    (dolist (pat compilation-patterns)
+      (add-compilation-pattern pat)))
 #+end_src
 *** Tabs
 Use 4 spaces instead of a tab.
