--- a/configuration.org
+++ b/configuration.org
@@ -93,6 +93,10 @@ down in this file, some are used with the default configuration.
 #+END_SRC
 * Default Settings
 This section contains settings for built-in Emacs features.
+** Disable exernal pin entry for GPG
+#+begin_src emacs-lisp
+  (setq epa-pinentry-mode 'loopback)
+#+end_src
 ** Prefer newer source files over byte-complied versions
 #+BEGIN_SRC emacs-lisp
   (setq load-prefer-newer t)
@@ -315,6 +319,12 @@ Create keybinding for code-review at point
     (define-key org-mode-map (kbd "C-c n i") 'org-roam-node-insert)
     (define-key org-mode-map (kbd "C-c n l") 'org-roam-buffer-toggle)
     (define-key org-mode-map (kbd "C-c n f") 'org-roam-node-find)
+
+    (setq org-roam-capture-templates '(("d" "default" plain "%?"
+                                        :target (file+head "${slug}.org.gpg"
+                                                           "#+title: ${title}\n")
+                                        :unnarrowed t)))
+
   #+end_src
   
 ** Org Roam
