--- a/configuration.org
+++ b/configuration.org
@@ -315,21 +315,22 @@ Create keybinding for code-review at point
                 (visual-line-mode 1)
                 (org-indent-mode)
                 (org-bullets-mode 1)))
-    (require 'org-roam)
-    (define-key org-mode-map (kbd "C-c n i") 'org-roam-node-insert)
-    (define-key org-mode-map (kbd "C-c n l") 'org-roam-buffer-toggle)
-    (define-key org-mode-map (kbd "C-c n f") 'org-roam-node-find)
-
-    (setq org-roam-capture-templates '(("d" "default" plain "%?"
-                                        :target (file+head "${slug}.org.gpg"
-                                                           "#+title: ${title}\n")
-                                        :unnarrowed t)))
-
   #+end_src
   
 ** Org Roam
 #+begin_src emacs-lisp
+  (require 'org-roam)
+  (define-key org-mode-map (kbd "C-c n i") 'org-roam-node-insert)
+  (define-key org-mode-map (kbd "C-c n l") 'org-roam-buffer-toggle)
+  (define-key org-mode-map (kbd "C-c n f") 'org-roam-node-find)
+
+  (setq org-roam-capture-templates '(("d" "default" plain "%?"
+                                      :target (file+head "${slug}.org.gpg"
+                                                         "#+title: ${title}\n")
+                                      :unnarrowed t)))
+
   (setq org-roam-directory (file-truename "~/notes"))
+  (setq org-roam-db-location (file-truename "~/notes/org-roam.db"))
   (org-roam-db-autosync-mode)
 #+end_src
 * Chatgpt
